# TentaCLAW

./: .dockerignore  .eslintrc.json  .gitattributes  .gitignore  BRAND.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH-EXECUTION-30DAY.md  LAUNCH-POSTS-READY.md  LAUNCH-STRATEGY.md  LICENSE  MASTER-PLAN-v3.md  MASTER-PLAN-v5.md  MASTER-PLAN-v6.md  MASTER-PLAN-v7.md  MASTER-PLAN-v8.md  MASTER-TentaCLAW-PLAN-v10-PART2.md  MASTER-TentaCLAW-PLAN-v10-PART3.md  MASTER-TentaCLAW-PLAN-v10.md  MASTER-TentaCLAW-PLAN-v11-PART2.md  MASTER-TentaCLAW-PLAN-v11-PART3.md  MASTER-TentaCLAW-PLAN-v11.md  MASTER-TentaCLAW-PLAN-v12-PART2.md  MASTER-TentaCLAW-PLAN-v12-PART3.md  MASTER-TentaCLAW-PLAN-v12-WAVES-206-299.md  MASTER-TentaCLAW-PLAN-v12-WAVES-31-80.md  MASTER-TentaCLAW-PLAN-v12-WAVES-84-200.md  MASTER-TentaCLAW-PLAN-v12-WAVES.md  MASTER-TentaCLAW-PLAN-v12.md  MASTER-TentaCLAW-PLAN-v2.md  MASTER-TentaCLAW-PLAN-v4-FINAL.md  MASTER-TentaCLAW-PLAN.md  Makefile  README.TXT  README.md  RESEARCH-v12-DEEP-DIVE.md  RESEARCH-v12-DEEP-GAPS.md  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: Dockerfile  package-lock.json  package.json  tsconfig.json
builder/: Dockerfile.build  build-cloud-image.sh  build-iso.sh  build-pxe.sh  test-boot-chain.sh  test-qemu.sh
clawhub/: package-lock.json  package.json  tsconfig.json
cli/: package-lock.json  package.json  tsconfig.json
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard-backup-v1/: index.html  vite.config.ts
data/: .admin-initial-password  tentaclaw.db-shm  tentaclaw.db-wal
deploy/: grafana-dashboard.json
docs/: ADAPTERS.md  AMD.md  API.md  ARCHITECTURE.md  BITNET.md  BRANDING_IDEAS_WAVE2.md  BRANDING_IDEAS_WAVE3.md  CLAWTOPUS_ASCII.md  CLAWTOPUS_MOB_QUOTES.md  CLI.md  CLOUD-BURST.md  CLOUD-DEPLOY.md  COMEDY_ENGINE.md  COMPRESSION.md  COST.md  DECLARATIVE.md  DEMO-SCRIPT.md  DEPLOYMENT.md  DISCORD_SETUP.md  DOCKER.md  EASTER_EGGS.md  (+33 more)
sdk-python/: README.md  pyproject.toml  setup.py
sdk-python/tentaclaw/: __init__.py
(+644 files in other folders)
