[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tentaclaw"
version = "0.1.0"
description = "Python SDK for TentaCLAW OS — GPU inference cluster management"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "TentaCLAW OS", email = "sdk@tentaclaw.io"},
]
keywords = ["gpu", "inference", "cluster", "llm", "ai", "ml", "tentaclaw", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Clustering",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://tentaclaw.io"
Documentation = "https://tentaclaw.io/docs/sdk/python"
Repository = "https://github.com/TentaCLAW-OS/sdk-python"
Issues = "https://github.com/TentaCLAW-OS/sdk-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["tentaclaw*"]

[tool.setuptools.package-data]
tentaclaw = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
